Fri Dec 10 10:37:17 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* sprintf.c (_HAVE_SANE_QUAD_): if a certain platform has LONG_LONG in
	  8 byte, it might be sane quad. [ruby-core:33634]

Fri Dec 10 10:07:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb: remove version 1.1 features.

Fri Dec 10 02:18:02 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/openssl/ossl_x509store.c (ossl_x509stctx_cleanup): removing C
	  implementation of `cleanup`.

	* ext/openssl/lib/openssl/x509.rb: adding ruby implementation of
	  `cleanup`.  OpenSSL::X509::StoreContext#cleanup is deprecated since
	  reusing the underlying struct doesn't make sense. [ruby-dev:42546]

Thu Dec  9 20:14:39 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lvar_defined_gen, shadowing_lvar_gen, dvar_defined): no
	  warnings for unused method and block arguments.
	  [ruby-dev:42718] [ruby-dev:42724]

Thu Dec  9 19:25:49 2010  Tanaka Akira  <akr@fsij.org>

	* dln.c: parenthesize macro arguments.

Thu Dec  9 18:51:06 2010  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/accesslog.rb (WEBrick::AccessLog#format): support
	  %{remote}p for logging remote (client) port number.
	  [ruby-dev:42670]

Thu Dec  9 11:00:30 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_dup): should copy contents only.  no instance
	  variable, no class would be copied.  it would affect methods
	  #sort, #reject, #transpose, #uniq, #compact, and #shuffle.
	  [ruby-core:33640]

	* array.c (rb_ary_reverse_m): ditto.

	* array.c (rb_ary_rotate_m): ditto.

Wed Dec  8 21:38:40 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/dl/lib/dl/struct.rb: clean a warning: assigned but unused
	  variable. patched by Kouhei Yanagita. [ruby-dev:42722]

	* ext/dl/lib/dl/import.rb: ditto.

Wed Dec  8 21:36:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (shadowing_lvar_gen): fix line number.  [ruby-dev:42718]

Wed Dec  8 20:37:11 2010  Tanaka Akira  <akr@fsij.org>
