@@ -1,3 +1,7 @@
+Fri Dec 10 10:47:53 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* sprintf.c (_HAVE_SANE_QUAD_): Don't forget LP64, r30156.
+
 Fri Dec 10 10:37:17 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* sprintf.c (_HAVE_SANE_QUAD_): if a certain platform has LONG_LONG in
